--- a/public/css/impress.css
+++ b/public/css/impress.css
@@ -1,32 +1,12 @@
 #impress {
     font-family: spicy-rice, fantasy;
+    font-size: 80px;
 }
 
 #impress .word {
     cursor: pointer;
 }
 
-#impress .veryBig {
-    font-size: 80px;
+#impress .main {
+    color: #F6A108;
 }
-
-#impress .big {
-    font-size: 60px;
-}
-
-#impress .medium {
-    font-size: 40px;
-}
-
-#impress .small {
-    font-size: 30px;
-}
-
-#impress .verySmall {
-    font-size: 20px;
-}
-
-#impress .rotate {
-    transform: rotate(-90deg);
-}
-
