--- a/public/css/impress.css
+++ b/public/css/impress.css
@@ -10,3 +10,23 @@
 #impress .main {
     color: #F6A108;
 }
+
+#impress .step .hide {
+    display: none;
+}
+
+#impress .present .hide {
+    display: block;
+    position: absolute;
+
+    height: 800px;
+    width: 800px;
+
+    margin: 0 auto;
+
+    background-color: blue;
+
+    font-family: Georgia, serif;
+    color: black;
+    font-size: 20px;
+}
